--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 
+
+
     <dependencies>
         <!-- Maven -->
         <dependency>
@@ -36,6 +38,12 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.6.3.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
+            <version>1.1</version>
         </dependency>
 
         <!-- Spring -->
@@ -77,8 +85,6 @@
         </dependency>
 
         <!-- JPA -->
-
-
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring5</artifactId>
@@ -89,6 +95,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.25</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.1.1</version>
         </dependency>
 
     </dependencies>
